--- a/index.css
+++ b/index.css
@@ -195,26 +195,31 @@ nav.nav .nav__logo {
   transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
 }
 
-.nav__burger span:first-child {
+.nav__burger__top {
   transform-origin: 0% 0%;
 }
 
-.nav__burger span:nth-last-child(2) {
+.nav__burger input:checked ~ .nav__burger__top {
+  transform: rotate(45deg) translate(0, -1px);
+}
+
+.nav__burger .nav__burger__bottom {
   transform-origin: 0% 100%;
 }
 
-.nav__burger input:checked ~ span:nth-last-child(3) {
+.nav__burger input:checked ~ .nav__burger__middle {
   opacity: 0;
   transform: rotate(0deg) scale(0.2, 0.2);
 }
 
-.nav__burger input:checked ~ span:nth-last-child(2) {
-  transform: rotate(-45deg) translate(0, -1px);
+.nav__burger input:checked ~ .nav__burger__bottom {
+  transform: rotate(-45deg);
 }
 
 .nav__burger__links {
   position: absolute;
-  left: calc(40px + 1rem);
+  right: -7.5vw;
+  top: 3rem;
   width: 0px;
   height: 100vh;
   display: flex;
@@ -231,7 +236,10 @@ nav.nav .nav__logo {
 
 .nav__burger__links li {
   padding: 20px 0;
-  font-size: 26px;
+  font-size: 0px;
+  white-space: nowrap;
+  opacity: 0;
+  transition: opacity 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), font-size 0.1s ease-out 0.35s;
 }
 
 .nav__burger__links li:first-child {
@@ -240,6 +248,11 @@ nav.nav .nav__logo {
 
 .nav__burger input:checked ~ ul {
   width: 100vw;
+}
+
+.nav__burger input:checked ~ ul li {
+  font-size: 26px;
+  opacity: 1;
 }
 
 /************* 
